--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Walkie-Talkie • Device UI</title>
 <style>
 :root{
-  --shell:#d6a500; --shell-hi:#f1c40f; --screen:#0b0e19; --line:#2a3146;
+  --shell:#d6a500; --shell-hi:#f1c40f; --line:#2a3146;
   --text:#e9ecf3; --muted:#9aa4b6; --accent:#4cc2ff; --ok:#49c56b; --err:#ff8b8b;
   --ptt:#e24646; --ptt-d:#b02f2f;
 }
@@ -27,7 +27,7 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px circle at 10% 1
 .engrave span{font-weight:800;letter-spacing:2px;font-size:12px;color:transparent;background:linear-gradient(180deg,rgba(255,255,255,.22),rgba(0,0,0,.85));
   -webkit-background-clip:text;background-clip:text;text-shadow:0 1px 0 rgba(255,255,255,.08), 0 -1px 0 rgba(0,0,0,.5);filter:drop-shadow(0 1px 0 rgba(255,255,255,.06));opacity:.8;}
 .screen-wrap{padding:10px 18px}
-.screen{position:relative;height:100%;background:radial-gradient(140% 140% at 50% 0%, #0f1322, #0a0d19 60%, #080b16 100%);border:1px solid #2a3146;border-radius:16px;overflow:hidden;
+.screen{position:relative;height:100%;background:radial-gradient(140% 140% at 50% 0%, #0f1322, #0a0d19 60%, #080b16 100%);border:1px solid var(--line);border-radius:16px;overflow:hidden;
   box-shadow:inset 0 0 40px rgba(0,0,0,.8), inset 0 1px 0 rgba(255,255,255,.04);display:grid;grid-template-rows:32px 1fr 36px;}
 .statusbar{display:flex;align-items:center;justify-content:space-between;padding:6px 10px;font-size:12px;color:#cfe3ff;}
 .pill{display:inline-flex;align-items:center;gap:6px;border:1px solid var(--line);padding:2px 8px;border-radius:999px;font-size:11px;background:#0c1121}
@@ -44,7 +44,7 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px circle at 10% 1
 .btn{cursor:pointer}.btn:disabled{opacity:.6;cursor:not-allowed}
 .badge{display:inline-block;border:1px solid var(--line);border-radius:999px;padding:2px 8px;font-size:11px;background:#0c1121;color:#cfe3ff}
 .list{display:grid;gap:8px}
-#errors{color:var(--err);font-size:12px}
+.err{color:var(--err);font-size:12px}
 
 .keys{position:relative;padding:14px 18px 18px;display:grid;align-items:center;}
 #pttBtn{display:block;margin:auto;height:96px;width:96px;border-radius:50%;background:radial-gradient(circle at 30% 30%,var(--ptt),var(--ptt-d));
@@ -68,7 +68,7 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px circle at 10% 1
 <script defer src="https://www.gstatic.com/firebasejs/10.12.3/firebase-functions-compat.js"></script>
 
 <script defer src="./firebase-config.js"></script>
-<script defer src="./app.js?v=device-tabs-id"></script>
+<script defer src="./app.js?v=names-and-id"></script>
 </head>
 <body>
 <div class="stage">
@@ -87,18 +87,21 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px circle at 10% 1
         <div class="statusbar">
           <span class="pill">Net: <span id="netPill">—</span></span>
           <span class="pill">Mic: <span id="micPill">—</span></span>
-          <span class="pill">User: <span id="userPill">—</span></span>
+          <span class="pill">User: <span id="userPill">ID —</span></span>
         </div>
 
-        <!-- LCD -->
+        <!-- LCD CONTENT -->
         <div class="lcd" id="lcd">
 
           <!-- AUTH -->
           <div id="page-auth">
             <div class="sectionTitle">Sign in</div>
-            <div class="hint">Your numeric ID is auto-generated after signup.</div>
+            <div class="hint">Use your email only for login. Your <b>Name</b> and <b>numeric ID</b> are what people will see.</div>
             <div class="field" style="margin-top:6px">
-              <input id="email" class="input" placeholder="Email" autocomplete="username">
+              <input id="nameInput" class="input" placeholder="Your name (for Sign up)">
+            </div>
+            <div class="field">
+              <input id="email" class="input" placeholder="Email (login/account only)" autocomplete="username">
               <input id="password" class="input" type="password" placeholder="Password" autocomplete="current-password">
             </div>
             <div class="field">
@@ -119,8 +122,9 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px circle at 10% 1
           <div id="page-friends" style="display:none">
             <div class="sectionTitle">Friends</div>
 
-            <!-- NEW: show your ID -->
             <div class="badge" id="myIdBadge" style="margin-top:4px">Your ID: —</div>
+            <button id="getIdBtn" class="btn" style="margin-top:6px">Show / refresh my ID</button>
+            <div id="getIdMsg" class="hint"></div>
 
             <div class="badge" style="margin-top:10px">Add friend by ID</div>
             <div class="field" style="margin-top:6px">
@@ -163,7 +167,7 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px circle at 10% 1
             </div>
             <div id="memberCounts" class="hint">—</div>
             <div id="memberNames" class="hint">—</div>
-            <div id="errors"></div>
+            <div id="errors" class="err"></div>
             <div class="hint" id="status" style="margin-top:6px">Status: Idle</div>
             <audio id="remoteAudio" autoplay playsinline style="display:none"></audio>
           </div>
@@ -180,7 +184,7 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px circle at 10% 1
       </div>
     </div>
 
-    <!-- KEYS -->
+    <!-- HARDWARE KEY -->
     <div class="keys">
       <button id="pttBtn" disabled oncontextmenu="return false;">TALK</button>
       <div class="ptt-label">Hold to talk (Spacebar)</div>
@@ -192,4 +196,3 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px circle at 10% 1
 
 </body>
 </html>
-
